query-parser/src/main/javacc/nl/inl/blacklab/queryParser/contextql/contextql.jj
/*

Contextual Query Language (SRU CQL, http://www.loc.gov/standards/sru/) parser definition.

Grammar based on BNF found here: http://srw.cheshire3.org/cql/bnf.html

javacc is used to generate Java code from this parser definition.

*/

options 
{
	STATIC=false;
	JAVA_UNICODE_ESCAPE=true;
	//USER_CHAR_STREAM=true;
}

PARSER_BEGIN(GeneratedContextualQueryLanguageParser)

package nl.inl.blacklab.queryParser.contextql;

import nl.inl.blacklab.search.textpattern.CompleteQuery;

@SuppressWarnings("all")
class GeneratedContextualQueryLanguageParser {

    ContextualQueryLanguageParser wrapper;

}

PARSER_END(GeneratedContextualQueryLanguageParser)

// Skip whitespace and comment
SKIP:  
{
	" " 
|	"\t" 
|	"\n" 
|	"\r"
}

/* Comments are 'special tokens': they are not reported, but are available
   for use by the next reported token */
SPECIAL_TOKEN:
{
	<SINGLE_LINE_COMMENT: "#" (~["\n","\r"])* ("\n"|"\r"|"\r\n")? >
|	<MULTI_LINE_COMMENT: "/*" (~["*"] | "*" ~["/"])* "*/">
}

// Token definitions
TOKEN [IGNORE_CASE]:
{
    <AND: "and" >
|   <OR: "or" >
|   <NOT: "not" >
|   <PROX: "prox" >
|   <IDENTIFIER: (["A"-"Z","a"-"z","_",".","-","*","?","0"-"9"])+ >
|	<STRING: "\"" (~["\"","\\"] | "\\" ~[] )* "\"" >
}

// --- Grammar rules start here --- 

/* a query */
CompleteQuery query(): 
{
	CompleteQuery a = null;
} 
{
    a=queryInternal() <EOF>
    {
        return a;
    }
}

CompleteQuery queryInternal():
{
	CompleteQuery a = null;
}
{
    scope() a=queryInternal()
    {
        return a;
    }
|   a=scopedClause()
    {
        return a;
    }
}

void scope():
{
}
{
    ">" [ LOOKAHEAD(2) prefix() "=" ] uri()
}

String prefix():
{
    String a;
}
{
    a=term()  { return a; }
}

String uri():
{
    String a;
}
{
    a=term()  { return a; }
}

CompleteQuery scopedClause():
{
    CompleteQuery a, b = null;
    String op = null;
}
{
    a=searchClause() [ op=booleanGroup() b=scopedClause() ]
    {
        if (op == null)
            return a;
        return wrapper.combineClauses(a, op, b);
    }
}

String booleanGroup():
{
    String a;
}
{
    a=ruleBoolean() [ modifierList() ]   { return a; }
}

String ruleBoolean():
{
    Token a;
}
{
    a=<AND>         {return a.toString();}
|   a=<OR>          {return a.toString();}
|   a=<NOT>         {return a.toString();}
|   a=<PROX>        {return a.toString();}
}

CompleteQuery searchClause():
{
    CompleteQuery tp;
    String i = null, r = null, t;
}
{
    "(" tp=queryInternal() ")"                  { return tp; }
|   [ LOOKAHEAD(2) i=index() r=relation() ] t=searchTerm()  { return wrapper.searchClause(i, r, t); }
}

String index():
{
    String a;
}
{
    a=term()  { return a; }
}

String relation():
{
    String a;
}
{
    a=comparitor() [ modifierList() ]
    {
        return a;
    }
}

String comparitor():
{
    String a;
}
{
    a=comparitorSymbol() {return a;}
|   a=namedComparitor()  {return a;}
}

String comparitorSymbol():
{
    Token a;
}
{
    a="="   {return a.toString();}
|   a=">"   {return a.toString();}
|   a="<"   {return a.toString();}
|   a=">="  {return a.toString();}
|   a="<="  {return a.toString();}
|   a="<>"  {return a.toString();}
}

String namedComparitor():
{
    String a;
}
{
    a=identifier()  {return a;}
}

void modifierList():
{
}
{
    LOOKAHEAD(2)
    "/" modifier() [ modifierList() ]
|   "/" modifierList()
}

void modifier():
{
}
{
    modifierName() [ comparitorSymbol() modifierValue() ]
    { throw new UnsupportedOperationException("Relation modifiers not supported yet!"); }
}

String modifierName():
{
    String a;
}
{
    a=term()  { return a; }
}

String modifierValue():
{
    String a;
}
{
    a=term()  { return a; }
}

String searchTerm():
{
    String a;
}
{
    a=term()  { return a; }
}

String term():
{
    String a;
    Token t;
}
{
    a=identifier()  {return a;}
|   t=<AND>         {return t.toString();}
|   t=<OR>          {return t.toString();}
|   t=<NOT>         {return t.toString();}
|   t=<PROX>        {return t.toString();}
}

String identifier():
{
    Token a;
}
{
    a=<IDENTIFIER>   {return a.toString();}
|   a=<STRING>       {return wrapper.chopEnds(a.toString());}
}
